# src/main/java/dev/drew/restaurantreview/controller/UserController.java
@@ -1,15 +1,12 @@
 package dev.drew.restaurantreview.controller;
 
 import dev.drew.restaurantreview.exception.InsufficientPermissionException;
-import dev.drew.restaurantreview.exception.RestaurantNotFoundException;
 import dev.drew.restaurantreview.exception.UserNotFoundException;
 import dev.drew.restaurantreview.service.UserService;
 import io.swagger.v3.oas.annotations.security.SecurityRequirement;
 import org.openapitools.api.UserApi;
-import org.openapitools.model.Restaurant;
 import org.openapitools.model.User;
 import org.openapitools.model.UserInput;
-import org.openapitools.model.UserResponse;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
@@ -54,8 +51,10 @@ public class UserController implements UserApi {
     )
     @Override
     @DeleteMapping("/user/{userId}/delete")
-    public ResponseEntity<Void> deleteUserById(Integer userId) {
-        return userService.deleteUserById(userId);
+    public ResponseEntity<Void> deleteUserById(
+            @PathVariable Integer userId) {
+        userService.deleteUserById(userId);
+        return ResponseEntity.status(HttpStatus.NO_CONTENT).build();
     }
 
     /**
